syntax = "proto3";
package ClassIsland.Shared.Protobuf.Enum;
option csharp_namespace = "ClassIsland.Shared.Protobuf.Enum";

enum CommandTypes {
  DefaultCommand=0;
  // Misc
  // Heartbeat
  Ping=10;
  Pong=11;
  
  // MiscCommands
  RestartApp=101;
  SendNotification=102;
  DataUpdated=103;
  GetClientConfig=104;
}