syntax = "proto3";
package ClassIsland.Shared.Protobuf.Service;
option csharp_namespace = "ClassIsland.Shared.Protobuf.Service";

import "Protobuf/Client/HandshakeScReq.proto";
import "Protobuf/Server/HandshakeScRsp.proto";

service Handshake {
  rpc BeginHandshake (Protobuf.Client.HandshakeScBeginHandShakeReq) returns (Protobuf.Server.HandshakeScBeginHandShakeRsp);
  
  rpc CompleteHandshake (Protobuf.Client.HandshakeScCompleteHandshakeReq) returns (Protobuf.Server.HandshakeScCompleteHandshakeRsp);
}